--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "@reduxjs/toolkit": "^2.9.2",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
-    "i18next-http-backend": "^3.0.2",
-    "lucide-react": "^0.552.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^16.2.3",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5"
   },
