--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@reduxjs/toolkit": "^2.9.2",
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
