--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@reduxjs/toolkit": "^2.9.2",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
-    "axios": "^1.13.2",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
+    "lucide-react": "^0.553.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -25,6 +25,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.12"
   },
   "devDependencies": {
