--- a/package.json
+++ b/package.json
@@ -11,12 +11,24 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@lexical/link": "^0.38.2",
+    "@lexical/list": "^0.38.2",
+    "@lexical/react": "^0.38.2",
+    "@lexical/rich-text": "^0.38.2",
+    "@lexical/utils": "^0.38.2",
     "@reduxjs/toolkit": "^2.9.2",
+    "@tinymce/tinymce-react": "^6.3.0",
+    "@tiptap/extension-color": "^3.12.0",
+    "@tiptap/extension-text-style": "^3.12.0",
+    "@tiptap/react": "^3.12.0",
+    "@tiptap/starter-kit": "^3.12.0",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
+    "lexical": "^0.38.2",
     "lucide-react": "^0.553.0",
+    "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
