--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   web:
     build: .
-    image: apm-project:latest
+    image: apm-frontend:latest
     ports:
       - "80:80"
     restart: unless-stopped
